# amplifier-collection-design-intelligence

./: .gitignore  README.md  pyproject.toml
agents/: animation-choreographer.md  art-director.md  component-designer.md  design-system-architect.md  layout-architect.md  responsive-strategist.md  voice-strategist.md
design_intelligence/: __init__.py  pyproject.toml
profiles/: designer.md
